<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cool"
    tools:context="com.example.rr.designing2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:text="@string/input_hint_text2"
        android:ems="10"
        android:id="@+id/editText2"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/pass"
        android:alpha="0.80"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/large"
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:alpha="0.80"

        android:layout_above="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/button"
        android:background="@color/skyblue"
        android:textColor="@color/white"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/small_text"
        android:textColor="@color/white"
        android:alpha="0.45"

        android:id="@+id/textView3"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/last"
        android:textColor="@color/white"
        android:alpha="0.45"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/input_hint_text"
        android:ems="10"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_action_name2"

        android:alpha="0.80"
        android:id="@+id/editText3"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
